--- a/MacFace2/PatternWindow.xib
+++ b/MacFace2/PatternWindow.xib
@@ -1,39 +1,50 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6154.21" systemVersion="14A261i" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6185.7" systemVersion="14A283o" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6154.21"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6185.7"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="PatternWindowController" customModule="MacFace2" customModuleProvider="target">
             <connections>
-                <outlet property="imageView" destination="XOE-45-0Jg" id="Q7k-cN-fOO"/>
+                <outlet property="label" destination="d2a-3H-tdt" id="iYL-Ku-Afe"/>
+                <outlet property="patternView" destination="sCf-Eg-I7v" id="CYv-uS-h2U"/>
                 <outlet property="window" destination="QvC-M9-y7g" id="GV8-qs-zSc"/>
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application"/>
         <window title="Window" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" deferred="NO" hasShadow="NO" oneShot="NO" releasedWhenClosed="NO" showsToolbarButton="NO" visibleAtLaunch="NO" animationBehavior="default" id="QvC-M9-y7g">
-            <windowStyleMask key="styleMask" closable="YES"/>
+            <windowStyleMask key="styleMask" closable="YES" miniaturizable="YES" resizable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
-            <rect key="contentRect" x="196" y="240" width="128" height="128"/>
+            <rect key="contentRect" x="196" y="240" width="128" height="145"/>
             <rect key="screenRect" x="0.0" y="0.0" width="2560" height="1417"/>
             <view key="contentView" id="EiT-Mj-1SZ">
-                <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                <rect key="frame" x="0.0" y="0.0" width="128" height="145"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="XOE-45-0Jg">
-                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
-                        <imageCell key="cell" refusesFirstResponder="YES" focusRingType="none" alignment="left" imageScaling="proportionallyDown" id="pD9-XD-ve6"/>
-                    </imageView>
+                    <customView translatesAutoresizingMaskIntoConstraints="NO" id="sCf-Eg-I7v" customClass="PatternView" customModule="MacFace2">
+                        <rect key="frame" x="0.0" y="17" width="128" height="128"/>
+                    </customView>
+                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="d2a-3H-tdt">
+                        <rect key="frame" x="0.0" y="0.0" width="128" height="17"/>
+                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="Label" id="qN3-zR-BCe">
+                            <font key="font" metaFont="system"/>
+                            <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                            <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                        </textFieldCell>
+                    </textField>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="XOE-45-0Jg" firstAttribute="top" secondItem="EiT-Mj-1SZ" secondAttribute="top" id="m8H-mL-j4W"/>
-                    <constraint firstAttribute="bottom" secondItem="XOE-45-0Jg" secondAttribute="bottom" id="pRU-cV-mYO"/>
-                    <constraint firstAttribute="trailing" secondItem="XOE-45-0Jg" secondAttribute="trailing" id="u0t-je-zB4"/>
-                    <constraint firstItem="XOE-45-0Jg" firstAttribute="leading" secondItem="EiT-Mj-1SZ" secondAttribute="leading" id="ymh-Fi-sAi"/>
+                    <constraint firstItem="sCf-Eg-I7v" firstAttribute="leading" secondItem="EiT-Mj-1SZ" secondAttribute="leading" id="L6e-Ae-uJi"/>
+                    <constraint firstAttribute="trailing" secondItem="sCf-Eg-I7v" secondAttribute="trailing" id="LD7-17-z8k"/>
+                    <constraint firstAttribute="bottom" secondItem="sCf-Eg-I7v" secondAttribute="bottom" constant="17" id="YGL-UM-xoR"/>
+                    <constraint firstAttribute="bottom" secondItem="d2a-3H-tdt" secondAttribute="bottom" id="Zpa-9S-8GG"/>
+                    <constraint firstAttribute="trailing" secondItem="d2a-3H-tdt" secondAttribute="trailing" id="d0o-ok-DDT"/>
+                    <constraint firstItem="d2a-3H-tdt" firstAttribute="leading" secondItem="EiT-Mj-1SZ" secondAttribute="leading" id="lbc-9s-Sjz"/>
+                    <constraint firstItem="sCf-Eg-I7v" firstAttribute="top" secondItem="EiT-Mj-1SZ" secondAttribute="top" id="uJH-Wy-MQx"/>
                 </constraints>
             </view>
-            <point key="canvasLocation" x="293" y="454"/>
+            <point key="canvasLocation" x="293" y="453.5"/>
         </window>
     </objects>
 </document>
